Mispelt title corrected

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Rushit Parmar">
   <meta name="description" content="Conatcts">
   <meta name="keywords" content="html, css, web, web development, seo">
-  <title>Conatcts</title>
+  <title>Contacts</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap">
