--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap">
-  <link rel="shortcut icon" href="./assets/image/diamond.png?v=2" type="image/x-icon">
+  <link rel="shortcut icon" href="./Assets/image/diamond.png" type="image/x-icon">
   <link rel="stylesheet" href="./Assets/style/index.css" media="all">
   <script src="./Assets/script/index.js" defer></script>
  </head>
